--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "webpack": "^3.10.0"
+    "express": "^4.16.2",
+    "webpack": "^3.10.0",
+    "webpack-dev-middleware": "^2.0.4"
   },
   "description": "My Project",
   "keywords": [],
@@ -14,6 +16,7 @@
   "name": "my-project",
   "scripts": {
     "compile": "webpack",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "version": "1.0.0"
