--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
-  "author": "",
+  "name": "predicta",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "express": "^4.16.2",
-    "webpack": "^3.10.0",
-    "webpack-dev-middleware": "^2.0.4"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.0"
   },
-  "description": "My Project",
-  "keywords": [],
-  "license": "ISC",
-  "main": "index.js",
-  "name": "my-project",
   "scripts": {
-    "compile": "webpack",
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "version": "1.0.0"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  }
 }
