user can click on an image and see clarifai info

--- a/src/config.js.example
+++ b/src/config.js.example
@@ -1,2 +1,4 @@
 export const awsAccessKey = ''
 export const awsSecretKey = ''
+export const clarifaiKey = ''
+export const clarifaiModel = 'Name Of Model'
